--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -35,8 +35,14 @@ input             {color: #5B5B5B;
                   font-size: 20px;
                   padding-top: 8.5px;
                   padding-bottom: 13.5px;
-                  padding-left: 10px;
-                  padding-right: 10px;
+                  padding-left: 14px;
+                  padding-right: 22px;
                   margin-left: 20px;
                   width: 60px;
                   height: 20px;}
+
+#log              {color: #5B5B5B;
+                  border: solid 1px #5B5B5B;
+                  font-size: 16px;
+                  padding: 10px;
+                  line-height: 28px;}
